--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,7 +6,31 @@
 @import './imports/grid.scss';
 
 /***********************
+ Global
+************************/
+
+@import './imports/global.scss';
+
+/***********************
  Typography
 ************************/
 
 @import './imports/typography.scss';
+
+/***********************
+ Forms
+************************/
+
+@import './imports/forms.scss';
+
+/***********************
+ Animations
+************************/
+
+@import './imports/animations.scss';
+
+/***********************
+ Responsive
+************************/
+
+@import './imports/responsive.scss';
